<?xml version="1.0"?> 
<package format="2">
  <!-- This is a Catkin package.xml file to optionally support building in
       a Catkin workspace. Catkin is not required to build this package. For
       more information, see: http://ros.org/reps/rep-0136.html -->
  <name>appl_online</name>
  <version>0.1.0</version>
  <description>
    DESPOT is a C++ implementation of the DESPOT algorithm. It takes as input a
    POMDP model (coded in C++) and simulates an agent acting in the environment.
  </description>
  <url type="website">http://bigbird.comp.nus.edu.sg/pmwiki/farm/appl/index.php</url>
  <maintainer email="motion@comp.nus.edu.sg">Motion Modeling, Analysis, and Planning Lab</maintainer>
  <license>GPL</license>
  <buildtool_depend>cmake</buildtool_depend>
  <!-- These are required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
